# hyperliquid-trading-bot

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: comm_service.py  config.py  discord_user_service.py  example_utils.py  execution_service.py  main.py  screener_service.py  wallet_manager.py
tests/: test_wallet_manager.py
