[tool.poetry]
name = "hyperliquid-trading-bot"
version = "0.1.0"
description = "A simple discord bot that can operate on Hyperliquid exchange"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hyperliquid-python-sdk = "^0.10.0"
discord = "^2.3.2"
discord-py = "^2.4.0"
ccxt = "^4.4.59"
requests = "^2.32.3"
pandas = "^2.2.3"
numpy = "^2.2.3"
pandas-ta = "^0.3.14b0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
